--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,8 @@ export(theme_lcbc_dark_void)
 export(theme_lcbc_grid)
 export(theme_lcbc_void)
 importFrom(dplyr,tribble)
+importFrom(extrafont,font_import)
+importFrom(extrafont,loadfonts)
 importFrom(ggplot2,"%+replace%")
 importFrom(ggplot2,annotation_custom)
 importFrom(ggplot2,discrete_scale)
@@ -28,6 +30,7 @@ importFrom(ggplot2,element_text)
 importFrom(ggplot2,margin)
 importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,scale_colour_gradientn)
+importFrom(ggplot2,scale_fill_gradientn)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_grey)
 importFrom(grDevices,colorRampPalette)
