--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(add_lcbc_logo)
 export(create_paper_project)
 export(lcbc_cols)
 export(lcbc_install_font)
+export(lcbc_logo_list)
 export(lcbc_pal)
 export(lcbc_projects)
 export(lcbc_sites)
